# CB-Tests

./: .gitignore  README.md  pyproject.toml
tests/: loan_test.sh
tests/appium/: common.robot  ios.robot
tests/loan/: elements.robot  loan_test.robot
